# new_admin_panel_sprint_3

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dumps/: movies_database_dump.sql
etl/: main.py  pipeline.py
etl/config/: app_settings.py  log_settings.py
etl/data/: elastic_index.py  schemas.py  sql_queries.py
etl/data/elastic_indexes/: genres_index.py  movies_index.py  persons_index.py
etl/data/sql_queries/: genres_sql.py  movies_sql.py  persons_sql.py
etl/drivers/: storage.py
etl/drivers/elastic/: loader.py
etl/drivers/postgres/: extractor.py
etl/management/: state.py
